...
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/white"
    android:padding="4dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nav_screenshots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/saved_layouts"
        android:drawableTop="@drawable/ic_home"
        android:background="@drawable/nav_button_selector"
...
