...
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
